--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
-spring:
-  r2dbc:
-    url: r2dbc:postgresql://localhost/jibek
-    username: postgres
-    password: vanyaPetuh
+#spring:
+#  r2dbc:
+#    url: r2dbc:postgresql://localhost/jibek
+#    username: jibek
+#    password: jibek
